--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,94 @@
-.App {
-  text-align: center;
-}
+@font-face {
+  font-family: myFirstFont;
+  src: url("SairaStencilOne-Regular.ttf"); }
+@font-face {
+  font-family: SourceCode;
+  src: url("SourceCodePro-SemiBold.ttf"); }
+@font-face {
+  font-family: Satisfy-Regular;
+  src: url("Satisfy-Regular.ttf"); }
+body {
+  background-color: #FFF5F0; }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.home_container {
   display: flex;
-  flex-direction: column;
+  margin: auto;
+  background-color: #302E2D;
+  width: 200rem;
   align-items: center;
+  justify-content: center; }
+
+.cardbox {
+  width: 25rem; }
+
+.card {
+  padding: 2rem;
+  height: 13rem;
+  color: #FFF5F0;
+  background-color: #302E2D;
+  padding-bottom: 4rem;
+  overflow-y: hidden;
+  margin: 1rem;
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
+  border-top: solid .5px black; }
+
+.card h3 {
+  text-align: center; }
+
+.cardbody {
+  overflow: hidden; }
+
+.card_image {
+  width: 16rem;
+  padding-left: 4rem; }
+
+.item1 {
+  background-image: url("home2.jpg");
+  background-repeat: no-repeat;
+  width: 800px;
+  height: 535px;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+  align-items: center;
+  margin-left: 2.8rem;
+  margin-right: 5rem;
+  margin-top: 10rem;
+  border: solid #302E2D 0.5rem;
+  border-radius: 10px; }
 
-.App-link {
-  color: #61dafb;
-}
+.item1 h1 {
+  margin: 1rem 1rem 1rem 1rem;
+  padding-left: 9rem;
+  padding-top: 5rem;
+  color: #302E2D;
+  font-size: 5rem;
+  font-family: SourceCodePro-SemiBold;
+  letter-spacing: 3px; }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+.item1 h4 {
+  color: #302E2D;
+  margin: 1rem 1rem 1rem 1rem;
+  padding-left: 13.2rem;
+  padding-top: .1rem;
+  font-size: 2.5rem;
+  font-family: Satisfy-Regular; }
+
+.banner {
+  width: 200rem;
+  margin: auto;
+  text-align: center;
+  background-color: #C74A37;
+  padding: 2rem; }
+
+.offerbox {
+  margin: auto;
+  background-color: #E0D90B;
+  width: 25rem;
+  text-align: center;
+  padding: 1rem; }
+
+@media only screen and (max-width: 800px) {
+  .home_container {
+    display: block; } }
+
+/*# sourceMappingURL=App.css.map */
