--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,7 @@
 $primary-color:#FFF5F0;
 $secondary-color:#302E2D;
 $secondary-color2:#595654;
-$banner-color:#C74A37;
+$primary-red-color:#C74A37;
 $offerbox-color:#E0D90B;
 
 
@@ -27,7 +27,6 @@ body{
 .card{
   height:13rem;
   color:$primary-color;
-  background-color: $secondary-color2;
   padding-bottom: 4rem;
   overflow:hidden;
   margin:1rem;
@@ -58,7 +57,7 @@ body{
   width:100%;
   margin:auto;
   text-align:center;
-  background-color:$banner-color;
+  background-color:$primary-red-color;
   padding:2rem;
   }
 .offerbox{
@@ -163,4 +162,74 @@ margin-left:-13%;
   50%  {transform:rotateZ(-3deg)}
   
   100% {transform:rotateZ(0deg)}
+}
+.menu-grid{
+  width:100%;
+  display:grid;
+  grid-template-columns:35% 30% 35%;
+  grid-template-rows:1fr 1fr;
+  grid-template-areas:
+  "category0 menudrink category1"
+  "category2 menudrink category3";
+
+ 
+}
+.category0{
+  grid-area:category0;
+  text-align:right;
+  margin-right:4rem;
+}
+.category1{
+  grid-area:category1;
+  text-align:left;
+}
+.category2{
+  grid-area:category2;
+  text-align:right;
+  margin-right:4rem;
+}
+.category3{
+  grid-area:category3;
+  text-align:left;
+}
+.menu-grid > ul{
+ 
+}
+.menu-title{
+  text-align:center;
+  color:$primary-color;
+}
+.category-title{
+  color:$primary-red-color;
+}
+.category-title1{
+  text-align:left;
+  margin-left:2.4rem;
+}
+.category-title3{
+  text-align:left;
+  margin-left:2.4rem;
+}
+.category-title{
+  font-size:2rem;
+}
+.menu-item{
+  list-style:none;
+  margin-top:1rem;
+ color:$primary-color;
+ font-size:1.5rem;
+
+}
+.menu-container{
+  background-color:$secondary-color;
+  height:100%;
+  width:100%;
+
+}
+.menu-drink{
+grid-area:menudrink;
+align-self:center;
+justify-self:center;
+  height:90%;
+
 }
