--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,8 @@ body {
   justify-content: center; }
 
 .cardbox {
-  width: 25rem; }
+  width: 25rem;
+  margin-left: 4rem; }
 
 .card {
   height: 13rem;
@@ -19,8 +20,7 @@ body {
   padding-bottom: 4rem;
   overflow: hidden;
   margin: 1rem;
-  margin-bottom: 2.5rem;
-  border-top: solid .5px black; }
+  margin-bottom: 2.5rem; }
 
 .card h3 {
   text-align: center; }
@@ -29,14 +29,16 @@ body {
   overflow: hidden; }
 
 .card_image {
+  display: block;
   width: 16rem;
-  padding-left: 4rem; }
+  padding-left: 2.2rem; }
 
 .card_image:hover {
   animation: skew2 .7s; }
 
 .home_container img {
-  width: 60%; }
+  width: 60%;
+  margin-left: 2rem; }
 
 .banner {
   width: 100%;
@@ -58,19 +60,18 @@ body {
     width: 100%; }
 
   .home_container > img {
-    width: 80%;
-    margin-left: 3rem; }
+    width: 80%; }
 
   .card {
     height: 25rem; }
 
   .cardbox {
-    width: 100%; }
+    width: 100%;
+    margin-left: 0; }
 
   .card_image {
     width: 100%;
-    padding: 0;
-    margin-left: 20%; }
+    padding-left: 4rem; }
 
   .card h3 {
     text-align: center; }
@@ -188,5 +189,36 @@ body {
   align-self: center;
   justify-self: center;
   height: 90%; }
+
+@media only screen and (max-width: 1000px) {
+  .menu-grid {
+    width: 100%;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-areas: "category0 category1" "category2 category3" "menudrink menudrink"; } }
+.story {
+  background-color: #302E2D;
+  color: #FFF5F0;
+  padding-bottom: 40%;
+  overflow-y: hidden; }
+
+.story-grid-text > h1 {
+  color: #C74A37; }
+
+.story-grid {
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  grid-template-rows: 1fr;
+  grid-template-areas: "story-text  story-image"; }
+
+.story-grid-text {
+  align-self: center;
+  grid-area: story-text;
+  font-size: 1.5rem; }
+
+.story-img {
+  grid-area: story-image;
+  width: 100%; }
 
 /*# sourceMappingURL=App.css.map */
