--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,6 @@
 $primary-color:#FFF5F0;
 $secondary-color:#302E2D;
-$secondary-color2:#595654;
+$secondary-color2:#4F4B46;
 $primary-red-color:#C74A37;
 $offerbox-color:#E0D90B;
 
@@ -21,7 +21,9 @@ body{
 }
 .cardbox{
 	width:25rem;
-  margin-left:4rem;
+   background-color:$secondary-color2;
+   margin-left:5%;
+   margin-bottom:1%;
 
 }
 .card{
@@ -29,7 +31,7 @@ body{
   color:$primary-color;
   padding-bottom: 4rem;
   overflow:hidden;
-  margin:1rem;
+
 
   margin-bottom:2.5rem;
  
@@ -38,17 +40,33 @@ body{
 .card h3{
   text-align:center;
 }
-.cardbody{
-  overflow:hidden;
+
+
+
+.card-grid{
+  width:100%;
+  display:grid;
+
+  grid-template-columns:1fr;
+  grid-template-rows:1fr 1fr;
+  grid-template-areas:
+  "card-title"
+  "card-image";
+}
+.card-title{
+grid-area:card-title;
+  
 }
 .card_image{
-  display:block;
   width:16rem;
-  padding-left:1.0rem;
+  grid-area:card-image;
+  justify-self:center;
+  padding-right:2rem;
 }
 .card_image:hover{
-  animation:skew2 .7s;
+  animation:grow .7s;
 }
+
 .home_container img{
   width:55%;
   margin-left:2rem;
@@ -73,10 +91,9 @@ body{
 @media only screen and (max-width: 1200px) {
 .card{
   height:10rem;
+  padding-bottom:10rem;
 }
-.card_image{
-  padding-left:.2rem;
-}
+
 }
 
 @media only screen and (max-width: 800px) {
@@ -101,7 +118,6 @@ body{
 }
 .card_image{
   width:100%;
-  padding-left:4rem;
   
 }
 .card h3{
@@ -117,7 +133,6 @@ body{
 @media only screen and (max-width: 600px) {
 .card {
   height:27rem;
-  margin-bottom:-10rem;
 }
 .home_container > img{
   width:100%;
@@ -126,6 +141,9 @@ body{
 .banner{
 width:100%;
 margin-top:10%;
+}
+.card{
+  margin-bottom:2%;
 }
 .offerbox{
 width:98%;
@@ -136,7 +154,6 @@ margin-left:-13%;
 @media only screen and (max-width: 400px) {
 .card {
   height:23rem;
-  margin-bottom:-10rem;
 }
 .home_container > img{
   width:100%;
@@ -156,10 +173,10 @@ margin-left:-13%;
 
 @keyframes grow {
   from {
-    transform: scale(1);
+    transform: scale(.95);
   }
   to {
-    transform: scale(2.03);
+    transform: scale(1);
   }
 }
 @keyframes skew {
@@ -339,11 +356,86 @@ display:flex;
   color:$primary-color;
 }
 .nav-item{
-  padding:1rem;
-  button{
-  background-color:$secondary-color;
+  margin:0;
+  padding:0;
+  padding-top:1.0rem;
+
+}
+.nav-item  a{
+  
+  padding:.5rem 1rem 0.5rem 1rem;
   border:None;
   color:$primary-color;
   font-size:1.5rem;
+  
+}
+.nav-item :hover {
+background-color:$secondary-color2;
   }
+.noselect {
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome and Opera */
+}
+.toggle-button{
+  position:absolute;
+  top:.75rem;
+  right: 1rem;
+  display: none;
+  flex-direction:column;
+  justify-content:space-between;
+  width:30px;
+  height:21px;
+}
+.toggle-button .bar{
+  height:3px;
+  width:100%;
+  background-color:$primary-color;
+  boder-radius: 10px;
+}
+@media (max-width:600px){
+  .toggle-button {
+  display: flex;
+  }
+  .navlist{
+  display:none;
+  width:100%;
+  }
+  .navbar{
+  flex-direction:column;
+  align-items:flex-start;
+  }
+  .navbar ul{
+    width:100%;
+    flex-direction:column;
+  }
+  .navlist li{
+  text-align:center;
+  }
+  .navlist.active{
+  display:flex;
+  }
+
+}
+
+.about-title{
+  color:$primary-red-color;
+  text-align:center;
+}
+.about-text-para{
+  color:$primary-color;
+}
+.about-text{
+  display:flex;
+  flex-direction:column;
+  margin:3%;
+}
+.about-image{
+  width:75%;
+  justify-self:center;
+  margin:auto;
 }
