--- a/src/App.css
+++ b/src/App.css
@@ -66,17 +66,19 @@ body {
 @media only screen and (max-width: 1200px) {
   .card {
     height: 10rem;
-    padding-bottom: 10rem; } }
+    padding-bottom: 8rem; } }
 @media only screen and (max-width: 800px) {
   .home_container {
     display: block;
     width: 100%; }
 
   .home_container > img {
-    width: 80%; }
+    width: 80%;
+    margin-left: 4rem; }
 
   .card {
-    height: 25rem; }
+    height: 25rem;
+    padding-bottom: 2rem; }
 
   .cardbox {
     width: 100%;
@@ -95,7 +97,10 @@ body {
     margin-left: 10.5%; } }
 @media only screen and (max-width: 600px) {
   .card {
-    height: 27rem; }
+    height: 23rem; }
+
+  .card_image {
+    margin-top: -4rem; }
 
   .home_container > img {
     width: 100%;
@@ -113,7 +118,7 @@ body {
     margin-left: -13%; } }
 @media only screen and (max-width: 400px) {
   .card {
-    height: 23rem; }
+    height: 13rem; }
 
   .home_container > img {
     width: 100%;
