--- a/src/App.scss
+++ b/src/App.scss
@@ -91,7 +91,7 @@ grid-area:card-title;
 @media only screen and (max-width: 1200px) {
 .card{
   height:10rem;
-  padding-bottom:10rem;
+  padding-bottom:8rem;
 }
 
 }
@@ -105,11 +105,12 @@ grid-area:card-title;
 
 .home_container > img{
   width:80%;
-
+  margin-left:4rem;
 
 }
 .card {
-  height:25rem
+  height:25rem;
+  padding-bottom:2rem;
 }
 .cardbox{
   width:100%;
@@ -132,7 +133,10 @@ grid-area:card-title;
 }
 @media only screen and (max-width: 600px) {
 .card {
-  height:27rem;
+  height:23rem;
+}
+.card_image{
+  margin-top:-4rem;
 }
 .home_container > img{
   width:100%;
@@ -153,7 +157,7 @@ margin-left:-13%;
 }
 @media only screen and (max-width: 400px) {
 .card {
-  height:23rem;
+  height:13rem;
 }
 .home_container > img{
   width:100%;
